--- a/settings.json
+++ b/settings.json
@@ -2,37 +2,55 @@
     "temperature": [
         {
             "name": "celsius",
-            "pointer": "temp_c",
+            "pointer": [
+                "temp_c",
+                "maxtemp_c",
+                "mintemp_c"
+            ],
             "symbole": "°C"
         },
         {
             "name": "fahrenheit",
-            "pointer": "temp_f",
+            "pointer": [
+                "temp_f",
+                "maxtemp_f",
+                "mintemp_f"
+            ],
             "symbole": "°F"
         }
     ],
     "pressure": [
         {
             "name": "mm",
-            "pointer": "precip_mm"
+            "pointer": [
+                "precip_mm"
+            ]
         },
         {
             "name": "mb",
-            "pointer": "pressure_in"
+            "pointer": [
+                "pressure_in"
+            ]
         },
         {
             "name": "inches",
-            "pointer": "precip_mm"
+            "pointer": [
+                "precip_mm"
+            ]
         }
     ],
     "windSpeed": [
         {
             "name": "km/h",
-            "pointer": "wind_kph"
+            "pointer": [
+                "maxwind_kph"
+            ]
         },
         {
             "name": "m/h",
-            "pointer": "wind_mph"
+            "pointer": [
+                "maxwind_mph"
+            ]
         }
     ]
 }
