--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
