--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_URL="http://localhost:3000/"
 # NEXT_PUBLIC_URL="http://192.168.1.19:3000/"
-WEATHER_KEY="306cef67b4d445ddbf9200508230109"
+WEATHER_KEY="826454625a09464da3730135232411"
+# WEATHER_KEY="306cef67b4d445ddbf9200508230109"
 WEATHER_URL=""
 LOCATION_URL="http://ip-api.com/json/?fields=61439"
