--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
